find_package(Grantlee)
if (Grantlee_FOUND)
    message(STATUS "PLUGIN: Grantlee templating found.")
    add_subdirectory(Grantlee)
else (Grantlee_FOUND)
    message(STATUS "PLUGIN: Not building with Grantlee template plugin.")
endif (Grantlee_FOUND)

find_library(ClearSilver_CS   libneo_cs.a)
find_library(ClearSilver_Util libneo_utl.a)
if (ClearSilver_CS)
    message(STATUS "PLUGIN: ClearSilver templating found.")
    add_subdirectory(ClearSilver)
else (ClearSilver_CS)
    message(STATUS "PLUGIN: Not building with ClearSilver template plugin.")
endif (ClearSilver_CS)
